# hestia

./: .env.example  .gitignore  AGENTS.md  LICENSE-APACHE  LICENSE-MIT  README.md  hestia.md  package-lock.json  package.json
assets/workflows/: sdxl.json
config/: default.toml
docs/: HANDOFF.md  architecture.md  desktop-companion.md  ide.md  implementation-summary.md  knowledge-map.md  memory.md  native-companion-rendering-spike.md  packaging.md  project-structure.md  roles.md  technical-route.md  ui-interface-contract.md  work-order.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: i18n.ts  main.ts  style.css
frontend/src/locales/: en.json  zh-CN.json
personality/: default.json
scripts/: package-all.sh  package-linux.sh  package-windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  initiative.rs  lib.rs  main.rs  memory.rs  observability.rs  protocol.rs  runtime.rs  scheduler.rs
src-tauri/src/multimodal/: mod.rs
src-tauri/src/personality/: mod.rs
src-tauri/src/resource/: mod.rs
src-tauri/src/workers/: comfyui.rs  local_llm.rs  mock.rs  mod.rs  model_loader.rs  remote_api.rs  vision_api.rs
