[package]
name = "hestia"
version = "0.1.0"
description = "Personal AI Companion Runtime Platform"
authors = ["eulcau"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "hestia_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
libc = "0.2"
signal-hook = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
